# skill-audit

./: .gitignore  AGENT_USAGE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RFI-implemented.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  test.yml
examples/: audit-clean-skill.toon  audit-evil-deploy.html  audit-malicious-skill-llm.html  audit-malicious-skill.html  audit-malicious-skill.toon  audit-mcp-llm.html  clean-role.md  clean-skill.md  index.html  malicious-skill.md  mcp.json  remote-audit-gstack.html  remote-audit-gstack.toon  remote-audit-mcp.html  remote-audit-skills.html  remote-audit-webgpu.html  remote-audits.md
src/skill_audit/: __init__.py  analyzer.py  cli.py  code_projection.py  config.py  fetcher.py  formatters.py  ignore.py  llm_reviewer.py  mcp_scanner.py  models.py  parser.py  verdict.py
src/skill_audit/rubrics/: __init__.py  role_rubrics.py  skill_rubrics.py
tests/: test_adversarial.py  test_analyzer.py  test_case_folding.py  test_code_projection.py  test_config.py  test_fetcher.py  test_formatters.py  test_ignore.py  test_intent_coherence.py  test_llm_reviewer.py  test_llm_verdict.py  test_mcp_scanner.py  test_parser.py  test_rubrics.py  test_transparency.py  test_verdict.py
