[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-skill-audit"
version = "0.10.2"
description = "Audit AI skill and role files for quality and trust. Catches bad prompts before they reach your agent."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Dawa" }]
keywords = ["ai", "skills", "audit", "claude", "prompt-engineering", "quality", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "mistletoe>=1.5.1",
]

[project.urls]
Homepage = "https://github.com/dawalama/skill-audit"
Repository = "https://github.com/dawalama/skill-audit"
Issues = "https://github.com/dawalama/skill-audit/issues"
Changelog = "https://github.com/dawalama/skill-audit/releases"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
ai-skill-audit = "skill_audit.cli:app"
skill-audit = "skill_audit.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, B: bugbear, UP: pyupgrade
select = ["E", "F", "W", "I", "B", "UP"]
# Long regex pattern lines in the rubrics are intentional and more readable unsplit.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src/skill_audit"]
ignore_missing_imports = true
# Pragmatic baseline — tighten over time. No implicit Optional, but not full strict.
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
